# CodeKnowledge

./: .gitignore  DESIGN.md  INDEXING.md  Knowledge-MCP  README.md  pyproject.toml  rocm-libraries
src/codeknowledge/: _build_code_index.py  app.py  cli.py  config.py  describe.py  embeddings.py  git.py  graph.py  index.py  llm.py  model.py  server.py  synthesize.py  tools.py
src/codeknowledge/extractors/: __init__.py  python.py
src/codeknowledge/extractors/python/: __init__.py  calls.py  structural.py
