[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "codeknowledge-mcp"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "tree-sitter>=0.24.0",
    "tree-sitter-python>=0.23.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "click>=8.0",
    "anthropic>=0.40.0",
    "sentence-transformers>=3.0.0",
    "numpy>=1.24.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
codeknowledge = "codeknowledge.cli:cli"
